--- a/js_avanzado/03_API_Nasa/index.html
+++ b/js_avanzado/03_API_Nasa/index.html
@@ -20,16 +20,21 @@
               <a class="navbar-brand">NASA</a>
               <label for="#">Seleciona tu rover</label>
               <form class="d-flex" role="search">
-                <select class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <select id="robot" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <option value="curiosity">Curiosity</option>
                     <option value="opportunity">Opportunity</option>
                     <option value="spirit">Spirit</option>
                 </select>
-                <button class="btn btn-outline-success" type="submit">Buscar</button>
+                <button onclick="buscar()" class="btn btn-outline-success" type="button">Buscar</button>
               </form>
+              <button onclick="anterior()" id="anterior" type="button" class="btn btn-success invisible">Anterior</button>
+              <button onclick="siguiente()" id="siguiente" type="button" class="btn btn-success invisible" >Siguiente</button>
             </div>
           </nav>
 
+          <div class="row mt-4" id="contenedor_cartas">
+
+          </div>
     </div>
     
 
